tests/test_scope/bad/scope.catala_en
## Article

```catala
declaration scope A:
  output a content integer
  output b content integer
  internal c content boolean

scope A:
  definition c equals false
  definition a under condition c consequence equals 42
  definition a under condition not c consequence equals 0
  definition b under condition not c consequence equals 1337
  definition b under condition not c consequence equals 0
```

```catala-test-inline
$ catala Interpret -s A
[ERROR]
There is a conflict between multiple valid consequences for assigning the same variable.

This consequence has a valid justification:
┌─⯈ scope.catala_en:13.57-13.61:
└──┐
13 │   definition b under condition not c consequence equals 1337
   │                                                         ‾‾‾‾
   └─ Article

This consequence has a valid justification:
┌─⯈ scope.catala_en:14.57-14.58:
└──┐
14 │   definition b under condition not c consequence equals 0
   │                                                         ‾
   └─ Article
#return code 123#
```
